fix buttons width in footer & cta tertiary animation removed on mobile devices, closes #5

--- a/src/assets/sass/components/buttons.scss
+++ b/src/assets/sass/components/buttons.scss
@@ -60,6 +60,9 @@
             opacity: var(--underline-opacity);
             animation: underline 1200ms cubic-bezier(0.6, 0.24, 0.41, 0.69)
                 infinite;
+            @include mobile-and-tablette {
+                display: none;
+            }
         }
     }
 }
