--- a/src/assets/sass/layouts/footers.scss
+++ b/src/assets/sass/layouts/footers.scss
@@ -3,7 +3,7 @@
     background: var(--colorBackground);
     padding: 4rem 4rem;
     @include mobile-and-tablette {
-        padding: 2rem;
+        padding: 2rem 1rem;
     }
     > ul {
         display: flex;
@@ -18,13 +18,16 @@
             li {
                 width: auto;
             }
+            @include mobile-and-tablette {
+                width: 100%;
+            }
         }
 
         @include mobile-and-tablette {
             flex-direction: column;
             gap: 2rem;
             a {
-                width: 90%;
+                width: 100%;
                 text-align: center;
             }
         }
